[package]
name = "tourist-serde"
version = "0.1.1"
authors = ["Harrison Goldstein <hgoldstein95@gmail.com>"]
edition = "2018"
license = "MIT"
description = "Serialization and deserialization for the tourist documentation system."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tourist-types = "0.1.0"